--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
     </head>
     <body>
         <main>
-            <!-- Header -->
-            <header class="header">
+            <header class="fix-header">
                 <div class="content">
-                    <!-- Navbar -->
                     <nav class="navbar">
                         <!-- Logo -->
                         <img src="./assets/img/logo.svg" alt="Besnik." />
@@ -46,8 +44,11 @@
                             <a href="#!" class="btn action-btn">Sign up</a>
                         </div>
                     </nav>
-
-                    <!-- Hero -->
+                </div>
+            </header>
+            <!-- Hero -->
+            <div class="hero-wrap">
+                <div class="content">
                     <div class="hero">
                         <div class="info">
                             <p class="sub-title">Welcome to Besnik Agency</p>
@@ -69,7 +70,7 @@
                         />
                     </div>
                 </div>
-            </header>
+            </div>
 
             <!-- Clients -->
             <div class="clients">
